--- a/assets/css/src/game.scss
+++ b/assets/css/src/game.scss
@@ -20,7 +20,7 @@ body {
 	canvas {
 		width: 900px;
 		height: 350px;
-		background: #434343;
+		background: url('../img/concrete.gif') top center no-repeat #434343;
 		margin: 0 auto;
 		box-shadow: 0px 1px 5px -2px #000;
 		margin-bottom: 10px;
