--- a/assets/css/src.css
+++ b/assets/css/src.css
@@ -110,4 +110,5 @@ body {
     background: url("../img/concrete.gif") top center no-repeat #434343;
     margin: 0 auto;
     box-shadow: 0px 1px 5px -2px #000;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    -webkit-filter: blur(0.6px); }
